--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>一统</title>
+    <script type="text/javascript" src="static/js/cos-js-sdk-v4.js"></script>
+    <script type="text/javascript" src="static/js/crypto-js/crypto-js.js"></script>
   </head>
   <body>
     <div id="app"></div>
